[project]
name = "transform"
version = "3.0.0"
description = "Default template for PDM package"
authors = [
    {name = "minju210", email = "juliana6190210@gmail.com"},
]
dependencies = [
   # "transform @ file:///${PROJECT_ROOT}/",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "pytest>=8.3.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
